# nes-rs

./: Cargo.toml  LICENSE  justfile
demos/: 01_first.s  02_add.s  memory.cfg
